test renamed server

--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
 	"name": "dumbchess-server",
-	"version": "0.1.1",
+	"version": "0.1.3",
 	"description": "Try to handle online chess games",
 	"license": "UNLICENSED",
 	"author": "Guillaume Mayer <gm.prog@outlook.com> (http://gm77.alwaysdata.net/cv)",
-	"main": "test.js",
+	"main": "server.js",
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/Guillaume-Mayer/dumbchess"
+	},
 	"dependencies": {
 		"express": "~4.14.0"
 	}
