--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
 		"url": "https://github.com/Guillaume-Mayer/dumbchess"
 	},
 	"dependencies": {
-		"express": "~4.15.2"
+		"express": "^4.15.4"
+	},
+	"devDependencies": {
+		"eslint": "^4.6.1"
 	}
 }
