--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
 		"url": "https://github.com/Guillaume-Mayer/dumbchess"
 	},
 	"dependencies": {
-		"express": "^4.15.4"
+		"express": "^4.15.4",
+		"morgan": "^1.8.2"
 	},
 	"devDependencies": {
 		"eslint": "^4.7.2"
